--- a/example/.gitignore
+++ b/example/.gitignore
@@ -45,3 +45,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Build directories
+/ios
+/android
+/web
+/wIndows
