--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mockito: ^5.0.15
 
 dev_dependencies:
+  build_runner: ^2.1.2
+  build_test: ^2.1.3
   flutter_test:
     sdk: flutter
+  test: ^1.16.8
 
 flutter:
